[ITB-1626] Apply consistent naming for all built-in step handlers and their inputs